# Procius_engine

./: .gitignore  CMakeLists.txt  bnr.sh  build.sh  make.sh  run.sh
include/: Actor.h  Component.h  Game.h
src/: Actor.cpp  Game.cpp  main.cpp
